Creacion de clases Repository y Model de datos, en este caso se usa una coleccion local y no una API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.practice.practicamovil2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ui.view.MainApplication"
         android:allowBackup="true"
