Implementacion de API y Service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,11 @@ dependencies {
     //Fragment
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
     implementation 'androidx.activity:activity-ktx:1.5.1'
+
+    //Retrofit2
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 }
